@@ -1,7 +1,8 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.361 2008-12-09 00:28:26 guru Exp $
+	$Id: ChangeLog,v 1.362 2008-12-09 00:51:16 guru Exp $
 -----------------------------------------------------------------------------------------
 2008-12-08	pwessel
+	* gmt_init.c:		-JXh was misinterpreted but -JXv was OK.  Now fixed.
 	* gmt_plot.c:		Bug in GMT_fill_polygon that affected polygon outline
 				3D text box was computed incorrectly.
 	* gmt_map.c:		Added improved clipping for geographic polygons using
@@ -10,6 +11,7 @@
 				"land" along map perimeter for some projections.
 	* gmt_math.h:		Check for macro definitions for system math functions.
 	* gmt_vector.c:		GMT_resample_path would add 360 to points along meridians.
+	* pslegend.c:		Can low use rectangle among the symbols.
 	
 2008-12-05	pwessel
 	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using
